\name{DiffBindNews}
\title{DiffBind News}
\encoding{UTF-8}

\section{Version 2.6.3}{
Bug Fixes

   \itemize{
      \item{fix bug when recentering passed-in peaks}
   }
}

\section{Version 2.6.2}{
Bug Fixes

   \itemize{
      \item{dontrun example code for dba.save writing into LIB}
      \item{dontrun example code for dba setting wd to LIB}
      \item{fix bug in dba.report when using filtering from dba.analyze}
      \item{fix bug in dba.count when passing in peaks using factors}
   }
}

\section{Version 2.6.1}{
Changes are (so far) bug fixes.

   \itemize{
      \item{Bug Fixes}
         \itemize{
             \item{Bug in dba.count caused by not registering one of the C
                   routines correctly.}
         }
      }
}


\section{Version 2.6.0}{
Changes since last release include bug fixes and some minor feature refinements.

   \itemize{
      \item{Feature changes}
         \itemize{
            \item{Change sortFun parameter in dba.plotHeatmap to default sd, with
                  FALSE as option for no sorting}
             \item{Change sortFun parameter in dba.plotHeatmap to default sd, with
                   FALSE as option for no sorting}
             \item{Sort peaks when adding directly via dba.peakset}
             \item{don't add _ if no initString in dba.report}
             \item{Internal feature: alternate peak counts: pv.resetCounts}
         }
      \item{Bug Fixes}
         \itemize{
             \item{Fix bug in dba.plotHeatmap is all values in a row are zero}
             \item{Change authors in vignette to conform to new standard}
             \item{Fix single peak boundary conditions}
             \item{Subset config$fragmentSize when masking}
             \item{Update example peaks to match data objects}
             \item{Fix bug in dba.plotHeatmap if all values in a row are zero}
             \item{Bugfix when returning report as GRanges with only one site}
             \item{Bugfix when plotting venns of consensus peaksets}